first batch - mazd and deviation/adherence coefficient

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
 *$py.class
-
-node_modules
 
 # Virtual environments
 .venv/
@@ -11,4 +10,5 @@ venv/
 direnv/
 
 target/
+tests/
 
